{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 387,
  "lineage": "6b010b9e-66c5-2e9a-8d82-4216df40f119",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-090db385f17c33b82",
            "domain": "vpc",
            "id": "eipalloc-7fedea49",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-052b319cdf56b5220",
            "private_dns": "ip-10-0-1-173.sa-east-1.compute.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-54-232-160-33.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.232.160.33",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "onboarding-project-B-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-052ddeb29edc3b12f",
            "domain": "vpc",
            "id": "eipalloc-7ff5f249",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-001b91d74bbc3d54f",
            "private_dns": "ip-10-0-2-150.sa-east-1.compute.internal",
            "private_ip": "10.0.2.150",
            "public_dns": "ec2-18-230-174-212.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.174.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "onboarding-project-B-sa-east-1c"
            },
            "tags_all": {
              "Name": "onboarding-project-B-sa-east-1c",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ba2df7fd044930d0",
            "domain": "vpc",
            "id": "eipalloc-7cf5f24a",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0795a163f937ba0a5",
            "private_dns": "ip-10-0-3-52.sa-east-1.compute.internal",
            "private_ip": "10.0.3.52",
            "public_dns": "ec2-54-207-201-231.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.201.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "onboarding-project-B-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:internet-gateway/igw-0537a49075642330c",
            "id": "igw-0537a49075642330c",
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B"
            },
            "tags_all": {
              "Name": "onboarding-project-B",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-7fedea49",
            "connectivity_type": "public",
            "id": "nat-0f86b0121e02a725d",
            "network_interface_id": "eni-052b319cdf56b5220",
            "private_ip": "10.0.1.173",
            "public_ip": "54.232.160.33",
            "subnet_id": "subnet-0abf4f394753e613d",
            "tags": {
              "Name": "onboarding-project-B-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-7ff5f249",
            "connectivity_type": "public",
            "id": "nat-0a2fff2caeef69bed",
            "network_interface_id": "eni-001b91d74bbc3d54f",
            "private_ip": "10.0.2.150",
            "public_ip": "18.230.174.212",
            "subnet_id": "subnet-05c91f1e0ca0e8c88",
            "tags": {
              "Name": "onboarding-project-B-sa-east-1c"
            },
            "tags_all": {
              "Name": "onboarding-project-B-sa-east-1c",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-7cf5f24a",
            "connectivity_type": "public",
            "id": "nat-026efa7197148171b",
            "network_interface_id": "eni-0795a163f937ba0a5",
            "private_ip": "10.0.3.52",
            "public_ip": "54.207.201.231",
            "subnet_id": "subnet-034d851c9b8875581",
            "tags": {
              "Name": "onboarding-project-B-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fc8870b20e227e561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f86b0121e02a725d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc8870b20e227e56",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051b1a4ec2a6f61bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a2fff2caeef69bed",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051b1a4ec2a6f61bc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb4f553d8c8a1bc31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-026efa7197148171b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb4f553d8c8a1bc3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0537a49075642330c",
            "id": "r-rtb-0289798327f0d0bfb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0289798327f0d0bfb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:route-table/rtb-0fc8870b20e227e56",
            "id": "rtb-0fc8870b20e227e56",
            "owner_id": "548322143865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f86b0121e02a725d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "onboarding-project-B-private-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-private-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:route-table/rtb-051b1a4ec2a6f61bc",
            "id": "rtb-051b1a4ec2a6f61bc",
            "owner_id": "548322143865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2fff2caeef69bed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "onboarding-project-B-private-sa-east-1c"
            },
            "tags_all": {
              "Name": "onboarding-project-B-private-sa-east-1c",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:route-table/rtb-0bb4f553d8c8a1bc3",
            "id": "rtb-0bb4f553d8c8a1bc3",
            "owner_id": "548322143865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-026efa7197148171b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "onboarding-project-B-private-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-private-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:route-table/rtb-0289798327f0d0bfb",
            "id": "rtb-0289798327f0d0bfb",
            "owner_id": "548322143865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0537a49075642330c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "onboarding-project-B-public"
            },
            "tags_all": {
              "Name": "onboarding-project-B-public",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06753a3a3e80d0cac",
            "route_table_id": "rtb-0fc8870b20e227e56",
            "subnet_id": "subnet-027881e759b3491d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060b68851d6d812dc",
            "route_table_id": "rtb-051b1a4ec2a6f61bc",
            "subnet_id": "subnet-09bdb6426e1d4485e"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3a38eb436cf46ab",
            "route_table_id": "rtb-0bb4f553d8c8a1bc3",
            "subnet_id": "subnet-06f39d8f080331ee4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d929ef8ecd3608ac",
            "route_table_id": "rtb-0289798327f0d0bfb",
            "subnet_id": "subnet-0abf4f394753e613d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0831d736e40e4c97d",
            "route_table_id": "rtb-0289798327f0d0bfb",
            "subnet_id": "subnet-05c91f1e0ca0e8c88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019573429296c2e56",
            "route_table_id": "rtb-0289798327f0d0bfb",
            "subnet_id": "subnet-034d851c9b8875581"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:subnet/subnet-027881e759b3491d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-027881e759b3491d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B-private-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-private-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:subnet/subnet-09bdb6426e1d4485e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-09bdb6426e1d4485e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B-private-sa-east-1c"
            },
            "tags_all": {
              "Name": "onboarding-project-B-private-sa-east-1c",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:subnet/subnet-06f39d8f080331ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-06f39d8f080331ee4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B-private-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-private-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:subnet/subnet-0abf4f394753e613d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0abf4f394753e613d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B-public-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-public-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:subnet/subnet-05c91f1e0ca0e8c88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05c91f1e0ca0e8c88",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B-public-sa-east-1c"
            },
            "tags_all": {
              "Name": "onboarding-project-B-public-sa-east-1c",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:subnet/subnet-034d851c9b8875581",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-034d851c9b8875581",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B-public-sa-east-1a"
            },
            "tags_all": {
              "Name": "onboarding-project-B-public-sa-east-1a",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            },
            "vpc_id": "vpc-00188da0baaf1a7e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:548322143865:vpc/vpc-00188da0baaf1a7e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4248b56f346ab0b",
            "default_route_table_id": "rtb-0c68b1adbd7cf5680",
            "default_security_group_id": "sg-08a1a8c7e80945155",
            "dhcp_options_id": "dopt-d857c1bf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00188da0baaf1a7e2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c68b1adbd7cf5680",
            "owner_id": "548322143865",
            "tags": {
              "Name": "onboarding-project-B"
            },
            "tags_all": {
              "Name": "onboarding-project-B",
              "Owner": "Donghyung Ko",
              "Phase": "Test",
              "Workspace": "BlueWhale/onboarding-projects/project-B"
            }
          }
        }
      ]
    }
  ]
}